Clean up error message for connections-per-hour user limit being exceeded. (Bug #9947)

sql/sql_parse.cc:
  Fix error message when connections per hour has been exceeded