sql/sql_parse.cc
@@ -449,7 +449,7 @@ static int check_for_max_user_connections(THD *thd, USER_CONN *uc)
       uc->user_resources.connections <= uc->conn_per_hour)
   {
     net_printf(thd, ER_USER_LIMIT_REACHED, uc->user,
-	       "max_connections",
+	       "max_connections_per_hour",
 	       (long) uc->user_resources.connections);
     error=1;
     goto end;
